# imgsel-qt

./: .gitignore  .gitmodules  .ignore  INSTALL.md  QTLICENSE.txt  README.md  USAGE.md  bionic-build.yml
.github/workflows/: bionic-build.yml  windows-build.yml
docker/: Dockerfile  build-emojigun-win-debug.sh  build-emojigun-win.sh  build-imgsel-win.sh  settings.mk
docker/alpine/: Dockerfile
docker/ubuntu/: Dockerfile
docs/: README.md
img/src/: installer-sidebar.xcf  splash.kra
src/: .ignore  Application.cpp  Application.h  CMakeLists.txt  compile_commands.json  main.cpp  old_main.cpp  qtres.qrc  version.res
src/app/: Application.cpp  Application.h  ApplicationUpdater.cpp  ApplicationUpdater.h
src/assets/: assets.h
src/config/: Config.h  ConfigBuilder.h  ConfigManager.cpp  ConfigManager.h
src/exceptions/: ImageNotLoadable.h
src/gui/: DragDropLayout.cpp  DragDropLayout.h  ImagePickerDrawer.cpp  ImagePickerDrawer.h  ImagePickerMove.h  MainWindow.cpp  MainWindow.h  SettingsWindow.cpp  SettingsWindow.h  Shape.h
src/gui/drawer/: ImageDrawer.cpp  ImageDrawer.h  ShapeDrawer.h
src/gui/picker/: ImagePickerDrawer.cpp  ImagePickerDrawer.h  ImagePickerMove.h
src/gui/util/: FileDownloaderProgressWindow.cpp  FileDownloaderProgressWindow.h  Shape.h
src/image/: image.h
src/input/: InstructionRouter.cpp
src/input/handler/: InputHandler.cpp  InputHandler.h  InputHandlerFactory.cpp  InputHandlerFactory.h  SelectionInputHandler.cpp  SelectionInputHandler.h
src/input/handler/filters/: FilteringInputHandler.h  TextFilteringInputHandler.cpp  TextFilteringInputHandler.h
src/input/handler/instruction/: CopyInstruction.h  FilterInstruction.h  InputInstructionType.h  ModeChangeInstruction.h  MoveInstruction.h  PreprocessorFlags.cpp  PreprocessorFlags.h
src/util/: EmojiImporter.cpp  EmojiImporter.h  EmojiZipDownloader.cpp  EmojiZipDownloader.h  FileDownloader.cpp  FileDownloader.h  SettingsKeys.h  Size.h  StringTools.h  Unzipper.cpp  Unzipper.h  autopaste.cpp  autopaste.h  image.h  linuxutils.cpp  linuxutils.h
src/util/config/: Config.h  ConfigBuilder.h  ConfigManager.cpp  ConfigManager.h  emojigun.nsi.in  project_config.h.in  version.rc.in
src/util/exceptions/: OutOfBounds.h
src/util/validators/: DirectoriesContainImages.h  IntXIntValidator.h
